<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="del">C</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">−</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="decimal">·</string>
    <string name="equals">=</string>
    <string name="digits">34×4</string>
    <string name="result">136</string>
    <string name="change_theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">Follow system</string>
    <string name="dialog_close">Close</string>
    <string name="modulus">%</string>
    <string name="euler">e</string>
    <string name="bracket">( )</string>
    <string name="degree">DEG</string>
    <string name="logarithm">log</string>
    <string name="natural_log">ln</string>
    <string name="tangent">tan</string>
    <string name="cosine">cos</string>
    <string name="sine">sin</string>
    <string name="arc_trig">%1s&lt;small>&lt;small>&lt;small>&lt;sup>&lt;b>−1&lt;/b>&lt;/sup>&lt;/small>&lt;/small>&lt;/small></string>
    <string name="inverse_function">%1s&lt;small>&lt;small>&lt;small>&lt;sup>&lt;b>x&lt;/b>&lt;/sup>&lt;/small>&lt;/small>&lt;/small></string>
    <string name="pi">π</string>
    <string name="square">^</string>
    <string name="squared">x²</string>
    <string name="square_root">√</string>
    <string name="cube_root">³√</string>
    <string name="inverse">INV</string>
    <string name="factorial">!</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="no_history">No history</string>
    <string name="back">Back</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">%d days ago</string>
    <string name="a_week_ago">A week ago</string>
    <string name="delete_dialog_title">Clear all history</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_clear">Clear</string>
    <string name="cleared_toast">Cleared!</string>
    <string name="copy_text">Copy</string>
    <string name="cut_text">Cut</string>
    <string name="paste_text">Paste</string>
    <string name="settings">Settings</string>
    <string name="haptic_feedback">Haptic feedback</string>
    <string name="disable_haptic">Tap to disable vibration when button is clicked.</string>
    <string name="enable_haptic">Tap to enable vibration when button is clicked.</string>
    <string name="plain">Plain</string>
    <string name="exponent">Exponent</string>
    <string name="fraction">Fraction</string>
    <string name="compute_format">Compute format</string>
    <string name="plain_info">Plain − display exact compute-results; in plain text.</string>
    <string name="exponent_info">Exponent − show results in exponential if it has trailing zeros. (2000 -> 2×10³)</string>
    <string name="fraction_info">Fraction − calculate decimal-results to fractions if the fractional numeral is less than 10 digits.</string>
    <string name="choose_format">Choose format</string>
    <string name="exponent_result">%1s&lt;small>&lt;small>&lt;small>&lt;sup>&lt;b>%2s&lt;/b>&lt;/sup>&lt;/small>&lt;/small>&lt;/small></string>
    <string name="fractionized">%1s&lt;small>&lt;small>&lt;small>&lt;sup>&lt;b>%2s&lt;/b>&lt;/sup>&lt;/small>&lt;/small>&lt;/small>/&lt;small>&lt;small>&lt;small>&lt;b>%3s&lt;/b>&lt;/small>&lt;/small>&lt;/small></string>
    <string name="general">General</string>
    <string name="save_equations">Save equations</string>
    <string name="resume_saving_equations">Tap to save equations to history</string>
    <string name="stop_saving_equations">Tap to stop saving equations to history</string>
    <string name="save_errors">Save errors</string>
    <string name="resume_saving_errors">Tap to save error-calculations to history</string>
    <string name="stop_saving_errors">Tap to stop saving error-calculations to history</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="info_text_1">Calculations are not being saved to history. Change this in settings.</string>
    <string name="info_text_2">Calculations are no longer being saved to history. Change this in settings.</string>
    <string-array name="dialog_options">
        <item>Dark</item>
        <item>Light</item>
        <item>Follow system</item>
    </string-array>
</resources>