<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UnusedAttribute">

    <TextView
        android:id="@+id/deg_rad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/degree" />

    <HorizontalScrollView
        android:id="@+id/equation_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deg_rad">

        <TextView
            android:id="@+id/equation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:foreground="?android:attr/selectableItemBackground"
            android:letterSpacing="0.05"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="45sp"
            tools:text="@string/digits" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/eq_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="end"
        android:letterSpacing="0.05"
        android:lines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equation_container"
        tools:text="@string/result" />
</androidx.constraintlayout.widget.ConstraintLayout>